k8s/k8s-deployment/yaml-files/prometheus/ingress-rules-grafana.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.poc.myvm.info
    http:
      paths:
      - path: /
        backend:
          serviceName: funky-gorilla-grafana
          servicePort: 80
